# akregator

configuration/: connection_details.cpp  settings_advanced.cpp
interfaces/: storagefactory.h
plugins/: CMakeLists.txt
plugins/mk4storage/: storagefactorymk4impl.cpp  storagefactorymk4impl.h  storagemk4impl.h
plugins/ttrss/: CMakeLists.txt  akregator_ttrss_plugin.desktop  connection_details.cpp  connection_details.h  feedstoragettrssimpl.cpp  feedstoragettrssimpl.h  storagefactoryttrssimpl.cpp  storagefactoryttrssimpl.h  storagettrssimpl.cpp  storagettrssimpl.h  ttrssconfig.kcfgc  ttrssplugin.cpp  ttrssplugin.h
plugins/ttrss/ui/: connection_details.ui
src/dummystorage/: storagefactorydummyimpl.cpp  storagefactorydummyimpl.h
